--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -124,7 +124,10 @@
         <textarea type="Especificacion"  id="Especificacion"   name="Especificacion"></textarea>
     </div>
     </div>
-    <br>
+    <div  class="Entrada" style="display: flex;">
+        <label for="Diagnostico">Diagnostico</label>
+        <input type="Diagnostico" id="Diagnostico" style="width: 100%;" name="Diagnostico">
+    </div>
         <div class="Entrada " style="display:flex;" >
         <label for="TyM" >Tratamientos y Medicamentos:</label>
         <textarea type="TyM"  id="TyM"  style="width: 100%;" name="TyM"></textarea>
