--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,12 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-       
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
+﻿
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
          <a class="navbar-brand" href=""><h3 style="color: black;"><img src="https://blogger.googleusercontent.com/img/a/AVvXsEjnynydZ-MWCTzvQubx7xJQa48UiXqX7HknXL3WZL4tw9bY2xiijuEboFVoNJjgIAU7-JrCxxaaJQ7EPvx4itucGscMIMkeupaUtngeWK2zKJHp1ou5ww6Js7KtLfC8EfSPwkNR6gRf6G-XGgekSmn8ldSfYwgYGpBkW7WFX5rY28Li6D8KYIfdmYdb" alt="" style="height: 90px;"></h3></a>
@@ -23,6 +15,21 @@
                 <div class="nav-item px-3">
             <NavLink class="nav-link" href="R_EmergenciaAsegurada">
                 <span  style="color: black;"   aria-hidden="true"></span> <h6 style="color: black; margin:10px;"> Emergencia Asegurada</h6>
+            </NavLink>
+        </div>
+                        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_Paciente">
+                <span  style="color: black;"   aria-hidden="true"></span> <h6 style="color: black; margin:10px;">Consultar Paciente</h6>
+            </NavLink>
+        </div>
+                        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_Emergencia">
+                <span  style="color: black;"   aria-hidden="true"></span> <h6 style="color: black; margin:10px;">Consultar Emergencia </h6>
+            </NavLink>
+        </div>
+                        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_EmergenciaA">
+                <span  style="color: black;"   aria-hidden="true"></span> <h6 style="color: black; margin:10px;"> Consultar Emergencia Asegurada</h6>
             </NavLink>
         </div>
     </nav>
