--- a/Pages/Vistas/V_Paciente.razor
+++ b/Pages/Vistas/V_Paciente.razor
@@ -1,5 +1,5 @@
 ﻿@page "/V_Paciente"
-@page "/V_Paciente/{OrdenID:int}"
+@page "/V_Paciente/{PacienteID:int}"
 
 @inject PacienteBLL Pacientes
 
@@ -28,6 +28,10 @@
         border-color: #D9D9D9;
         border-radius: 15px;
         width: 100%;
+    }
+    body
+    {
+        background-color: white;
     }
         </style>
     </head>
@@ -132,20 +136,20 @@
 
 
     public Paciente paciente {get; set;} = new Paciente();
-    public int OrdenID{get;set;}
+    public int PacienteID{get;set;}
 
     protected override void OnInitialized(){
 
-        paciente.OrdenID=0;
+        paciente.PacienteID=0;
         Buscar();
     }
 
      private void Buscar()
     {
-        var pacienteEncontrado = Pacientes.Buscar(OrdenID);
+        var pacienteEncontrado = Pacientes.Buscar(PacienteID);
         if(pacienteEncontrado != null)
         {
-            Console.WriteLine($"Se encontro una ocupacion con el ID{this.paciente.OrdenID}");
+            Console.WriteLine($"Se encontro una ocupacion con el ID{this.paciente.PacienteID}");
             this.paciente = pacienteEncontrado;
             
         }
@@ -154,6 +158,7 @@
             Nuevo();
             Console.WriteLine("Id no existente");
         }
+        
     }
 
 
@@ -164,7 +169,7 @@
     public void Guardar(){
 
         Pacientes.Guardar(this.paciente);
-        Console.WriteLine($"Se guardo en el {this.paciente.OrdenID}");
+        Console.WriteLine($"Se guardo en el {this.paciente.PacienteID}");
         this.Nuevo();
         
         
