--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using DrEmergencias
 @using DrEmergencias.Shared
+@using Radzen
+@using Radzen.Blazor
+@using Microsoft.EntityFrameworkCore
+@using System.ComponentModel.DataAnnotations
